Compiler/tests/typing/bad/testfile-undef_var-2.rs

fn f() { let x = 42; }
fn main() { x; }
